--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li class="active"><a href="#">Link<span class="sr-only">(current)</span></a></li>
+        <li><a href="/favorite_pets">My Favorite Pets</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -47,9 +47,12 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/users/sign_up">Sign Up</a></li>
+      <% if current_user == nil %>
         <li><a href="users/sign_in">Log In</a></li>
+        <li><a href="/users/sign_up">Sign Up</a></li>
+        <% else %>
         <li><%= link_to "Log Out", "/users/sign_out", method: :delete %></li>
+        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -73,6 +76,9 @@
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">&times;</span><span class="sr-only">Close</span></button>
     <%= message.html_safe %>  
   </div>
+<% end %>
+<% if current_user != nil%>
+<p>Welcome<%= current_user.email %></p>
 <% end %>
 <%= yield %>
 
